[gd_scene load_steps=8 format=3 uid="uid://db6p0de700xhc"]

[ext_resource type="Script" path="res://scripts/truck.gd" id="1_awhwe"]
[ext_resource type="Texture2D" uid="uid://b5bbqg6ixxgdc" path="res://assets/props/Truck.png" id="2_8w71p"]
[ext_resource type="PackedScene" uid="uid://4skxeuoh7okk" path="res://scenes/hovering_label.tscn" id="3_8m1ba"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gsgx0"]
size = Vector2(59, 64)

[sub_resource type="LabelSettings" id="LabelSettings_y3q3a"]
font_size = 30
font_color = Color(0.947199, 0.947199, 0.947199, 1)
shadow_size = 5
shadow_color = Color(0.10748, 0.10748, 0.10748, 0.580392)
shadow_offset = Vector2(2.245, 1.19)

[sub_resource type="Animation" id="Animation_3vh11"]
resource_name = "truck_label"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(37, -82), Vector2(37, -73), Vector2(37, -82)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wgiph"]
_data = {
"truck_label": SubResource("Animation_3vh11")
}

[node name="Truck" type="Area2D"]
position = Vector2(37, -34)
collision_mask = 6
monitorable = false
script = ExtResource("1_awhwe")
packages = Array[String](["res://scenes/packages/small_package.tscn", "res://scenes/packages/long_package.tscn", "res://scenes/packages/wood_package.tscn"])
input_priority = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_8w71p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(39.5, 0)
shape = SubResource("RectangleShape2D_gsgx0")

[node name="Label" parent="." node_paths=PackedStringArray("animation_player") instance=ExtResource("3_8m1ba")]
offset_left = 37.0
offset_top = -82.0
offset_right = 70.0
offset_bottom = -40.0
text = "E"
label_settings = SubResource("LabelSettings_y3q3a")
horizontal_alignment = 1
vertical_alignment = 1
animation_player = NodePath("AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Label"]
libraries = {
"": SubResource("AnimationLibrary_wgiph")
}

[node name="PackageSpawnPoint" type="Marker2D" parent="."]
position = Vector2(92, -22)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="handle_interaction" from="." to="." method="_handle_interaction"]

[editable path="Label"]
